@@ -26,6 +26,7 @@ ClamAV patches were submitted by (in alphabetical order):
 Kamil Andrusz <wizz@mniam.net>
 Patrick Bihan-Faou <patrick@mindstep.com>
 Damien Curtain <damien@pagefault.org>
+Michael Dankov <misha@btrc.ru>
 Alejandro Dubrovsky <s328940@student.uq.edu.au>
 Magnus Ekdahl <magnus@debian.org>
 Jason Englander <jason@englanders.cc>
@@ -44,6 +45,7 @@ Ed Phillips <ed@UDel.Edu>
 Andreas Piesk <Andreas.Piesk@heise.de>
 Ant La Porte <ant@dvere.net>
 Thomas Quinot <thomas@cuivre.fr.eu.org>
+Joe Talbott <josepht@cstone.net>
 Gernot Tenchio <g.tenchio@telco-tech.de>
 Laurent Wacrenier <lwa@teaser.fr>
 David Woakes <david@mitredata.co.uk>
